--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "type": "module", 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "2.8.5",
     "dotenv": "17.2.0",
     "ethers": "6.15.0",
@@ -21,14 +22,22 @@
     "keccak256": "1.0.6",
     "lodash": "4.17.21",
     "merkletreejs": "0.5.2",
+    "mongoose": "^8.16.4",
     "morgan": "1.10.1",
     "socket.io": "4.7.5"
   },
   "devDependencies": {
-    "@types/cors": "2.8.17",
-    "@types/express": "4.17.21",
-    "@types/node": "20.14.2",
-    "nodemon": "3.1.10",
-    "ts-node": "10.9.2"
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.96",
+    "@types/morgan": "^1.9.10",
+    "@types/nanoid": "^2.1.0",
+    "@types/node": "^20.14.2",
+    "@types/socket.io": "^3.0.1",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
