--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module", 
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
@@ -24,6 +24,7 @@
     "merkletreejs": "0.5.2",
     "mongoose": "^8.16.4",
     "morgan": "1.10.1",
+    "nanoid": "5.1.5",
     "socket.io": "4.7.5"
   },
   "devDependencies": {
